test/files/neg/t0590.check
t0590.scala:2: error: type mismatch;
 found   : Null(null)
 required: T
  implicit def foo[T] : T = null
                            ^
one error found
